--- a/auction/package.json
+++ b/auction/package.json
@@ -22,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+    "proxy": "https://Auction-postship-env.eba-pzad7jme.us-east-1.elasticbeanstalk.com",
   "eslintConfig": {
     "extends": [
       "react-app",
