--- a/auction/package.json
+++ b/auction/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,7 +22,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://Auction-postship-env.eba-pzad7jme.us-east-1.elasticbeanstalk.com",
   "eslintConfig": {
     "extends": [
       "react-app",
